Fixed alignment in gallery

--- a/src/styles/_gallery.scss
+++ b/src/styles/_gallery.scss
@@ -66,6 +66,7 @@
   display: grid;
   grid-template-columns: repeat(12, 1fr);
   grid-gap: var(--gap);
+  align-items: stretch;
 }
 
 .grid-item {
@@ -80,6 +81,11 @@
 .column {
   display: grid;
   grid-gap: var(--gap);
+}
+
+.image-wrapper {
+  aspect-ratio: var(--ratio, auto);
+  overflow: hidden;
 }
 
 .image {
